RESOLVED FIXED73730
<video> elements should disable the system and display sleep when playing on OS X.
https://bugs.webkit.org/show_bug.cgi?id=73730
Summary <video> elements should disable the system and display sleep when playing on ...
Jer Noble
Reported 2011-12-02 18:48:33 PST
<video> elements should disable the system and display sleep when playing on OS X.
Attachments
Patch (2.63 KB, patch)
2011-12-02 21:58 PST, Jer Noble
no flags
Patch (2.50 KB, patch)
2011-12-02 22:24 PST, Jer Noble
no flags
Patch (2.71 KB, patch)
2011-12-02 23:32 PST, Jer Noble
no flags
Patch (4.21 KB, patch)
2011-12-03 15:56 PST, Jer Noble
ap: review+
Jer Noble
Comment 1 2011-12-02 21:58:51 PST
Jer Noble
Comment 2 2011-12-02 22:24:21 PST
Jer Noble
Comment 3 2011-12-02 23:32:13 PST
Mark Rowe (bdash)
Comment 4 2011-12-02 23:39:42 PST
Comment on attachment 117746 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=117746&action=review > Source/WebCore/html/HTMLMediaElement.cpp:2508 > + m_sleepDisabler = DisplaySleepDisabler::create("WebCore::HTMLMediaElement playback"); The reason for the power assertion doesn’t match the format used elsewhere in WebKit. It would be good to be consistent.
Mark Rowe (bdash)
Comment 5 2011-12-02 23:46:22 PST
Also, it would be great if you could mention the associated Radar number both in Bugzilla and the ChangeLog.
Jer Noble
Comment 6 2011-12-03 15:53:57 PST
Jer Noble
Comment 7 2011-12-03 15:56:45 PST
Created attachment 117773 [details] Patch While Mark already r+'d the previous patch, I thought this new patch was worth obsoleting that one. This new patch has changes to the WebKit2 sandbox profile, which allows DisplaySleepDisabler to work when running in the WebProcess.
Alexey Proskuryakov
Comment 8 2011-12-05 10:59:26 PST
Comment on attachment 117773 [details] Patch r=me
Jer Noble
Comment 9 2011-12-05 11:47:29 PST
Jer Noble
Comment 10 2011-12-19 10:34:02 PST
*** Bug 65061 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.