<video> elements should disable the system and display sleep when playing on OS X. https://bugs.webkit.org/show_bug.cgi?id=73730 <rdar://problem/9502155>

Reviewed by Alexey Proskuryakov.

Source/WebCore:

No new tests; platform specific system behavior only.

Create a new DisplaySleepDisabler object when the playback rate becomes non-zero, and destroy
that object when the playback rate drops back to zero.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::mediaPlayerRateChanged):
* html/HTMLMediaElement.h:

Source/WebKit2:

Allow the WebProcess to make connections to the PowerManagement control mach server.

* WebProcess/com.apple.WebProcess.sb:

git-svn-id: svn://svn.chromium.org/blink/trunk@102024 bbb929c8-8fbe-4397-9dbb-9b2b20218538