third_party/WebKit/Source/WebCore/html/HTMLMediaElement.cpp
@@ -100,6 +100,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "MediaElementAudioSourceNode.h"
 #endif
 
+#if PLATFORM(MAC)
+#include "DisplaySleepDisabler.h"
+#endif
+
 using namespace std;
 
 namespace WebCore {
@@ -2497,6 +2501,14 @@ void HTMLMediaElement::mediaPlayerRateChanged(MediaPlayer*)
     m_playbackRate = m_player->rate();
     if (m_playing)
         invalidateCachedTime();
+
+#if PLATFORM(MAC)
+    if (m_player->paused() && m_sleepDisabler)
+        m_sleepDisabler = nullptr;
+    else if (!m_player->paused() && !m_sleepDisabler)
+        m_sleepDisabler = DisplaySleepDisabler::create("com.apple.WebCore: HTMLMediaElement playback");
+#endif
+
     endProcessingMediaPlayerCallback();
 }
 
